# fork-perun-rs

./: .gitmodules  Cargo.toml  MAINTAINERS.md  NOTICE  README.md  build.rs
.cargo/: config.toml
.github/: settings.yml
.github/workflows/: ci.yml
cortex-m-demo/: Cargo.toml
cortex-m-demo/src/: application.rs  bus.rs  button.rs  channel.rs  main.rs
examples/: go-integration.rs  lowlevel_basic_channel.rs
examples/go-integration/: go.mod  go.sum  main.go  simple_wallet.go  transactor.go
examples/go-integration/control/: control.go
examples/go-integration/perun-remote/: Makefile  funder.go  presignedaccount.go  server.go  watcher.go  wire.go
examples/go-integration/perun-remote/proto/: perun-remote.pb.go
linker/stm32f439/: memory.x
src/: channel.rs  client.rs  lib.rs  messages.rs  sig.rs  wire.rs
src/abiencode/: as_array.rs  as_bytes.rs  as_dyn_array.rs  error.rs  hashing.rs  ser.rs  tests.rs  types.rs
src/abiencode/tests/: address.rs  bytes.rs  bytes_in.rs  bytescontainer.rs  dynstruct_in.rs  simple.rs  solidity_docs.rs  static_in.rs  staticstruct_in.rs  string.rs
src/channel/: active.rs  agreed_upon.rs  channel_update.rs  fixed_size_payment.rs  proposal.rs  signed.rs  withdrawal_auth.rs
src/messages/: funding_request.rs  proposal.rs  update.rs  watch_request.rs
src/sig/: dummy.rs  k256.rs  secp256k1.rs  tests.rs
src/wire/: encoding.rs  errors.proto  nodetypes.proto  perun-remote.proto  sdktypes.proto
