[package]
name = "perun"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
sha3 = { version = "0.10.6", default-features = false }
uint = { version = "0.9.5", default-features = false }
secp256k1 = { version = "0.24.1", default-features = false, features = ["rand", "alloc", "recovery"], optional = true}
k256 = { version = "0.11.6", default-features = false, features = ["ecdsa", "keccak256", "arithmetic"], optional = true }
rand = { version = "0.8.5", default-features = false, features = ["min_const_gen"] }
prost = { version = "0.11.5", default-features = false, features = ["prost-derive"] }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }

[build-dependencies]
prost-build = { version = "0.11.5" }

[features]
default = ["std", "k256"]
std = ["serde/std", "rand/std", "rand/std_rng"]
secp256k1 = ["dep:secp256k1", "std"]
k256 = ["dep:k256"]
nostd-example = ["k256", "rand/std_rng"]
